Fix the following in the list of contents of the mobile board 1. the course name is not aligned in the center 2. the width of the course type block is not wide enough to cause a line break layout

--- a/css/search.css
+++ b/css/search.css
@@ -206,7 +206,9 @@ body {
         display: none;
     }
     .card__name {
-        width: 70%;
+        width: 65%;
+        display: flex;
+        align-items: center;
         padding: 4px 0 4px 10px;
         margin: 0 0 6px;
         border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -214,7 +216,7 @@ body {
         font-size: 1.2rem;
     }
     .card__type {
-        width: 30%;
+        width: 35%;
         display: flex;
         justify-content: right;
         padding: 4px 10px 4px 0;
